force-app/main/default/objects/PWChrono_Leave_Ledger__c/PWChrono_Leave_Ledger__c.object-meta.xml
<CustomObject>
    <description>Audit trail of leave balance changes — allocations, usage, cancellations, adjustments, carry-forwards and encashments.</description>
    <label>PWChrono Leave Ledger</label>
    <nameField>
        <displayFormat>LED-{00000}</displayFormat>
        <label>Ledger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Leave Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>