force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Balance_After__c</fullName>
    <label>Balance After</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>