force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Canonical_Leave__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Leave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canonical Leave</label>
    <referenceTo>Leave__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Canonical_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>