force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Ledger (Created By)</relationshipLabel>
    <relationshipName>Leave_Ledger_Created_By</relationshipName>
    <type>Lookup</type>
</CustomField>