force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>