force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Ledger (Employee)</relationshipLabel>
    <relationshipName>Leave_Ledger_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>