force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Leave__c.field-meta.xml
<CustomField>
    <fullName>Leave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave</label>
    <referenceTo>PWChrono_Leave__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>