force-app/main/default/objects/PWChrono_Leave_Ledger__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>PWChrono_Leave_Type__c</referenceTo>
    <relationshipLabel>Leave Ledger Entries</relationshipLabel>
    <relationshipName>Leave_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>